# RustFileAnalyzerWebApp

./: Cargo.toml  README.md  index.html  styles.css
src/: main.rs
