[package]
name = "file_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-multipart = "0.7.2"
actix-files = "0.6.6"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
ring = "0.17.7"  # for hashing
mime_guess = "2.0.5"
md5 = "0.7.0"
hex = "0.4.2"
infer = "0.16.0"
sanitize-filename = "0.6.0"
ffuzzy = "0.3.12"
human-hash = "0.4" 
uuid = { version = "1.11.0", features = ["v5", "std"] }
